# jeeves-core

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS.md  ASSESSMENT_SUMMARY.md  AUDIT.md  AUDIT_AGENTIC_FRAMEWORKS.md  AUDIT_EVALUATION.md  AUDIT_FINAL.md  AUDIT_ORCHESTRATION_FRAMEWORK.md  AUDIT_REPORT.md  CAPABILITIES_AUDIT.md  CHANGELOG.md  COMMBUS_COVERAGE_ANALYSIS.md  COMMBUS_IMPLEMENTATION_RESULTS.md  CONSTITUTION.md  CONSTITUTIONAL_ALIGNMENT.md  CONTRACT.md  CONTRIBUTING.md  COVERAGE_ANALYSIS_COMPLETE.md  COVERAGE_COMPARISON.md  COVERAGE_REPORT.md  CRITICAL_ISSUES_FOUND.md  Cargo.toml  Dockerfile  EVALUATION.md  FRAMEWORK_COMPARISON.md  FUTURE_PLAN.md  GAP_ANALYSIS.md  GAP_RCA.md  GO_CODEBASE_ANALYSIS.md  GO_CRITICAL_FIXES.md  GO_IMPLEMENTATION_PLAN.md  HANDOFF.md  IIITH_FACULTY_FIT.md  IMPLEMENTATION_SUMMARY.md  INVESTOR_TECHNICAL_ANALYSIS.md  Justfile  (+40 more)
avionics/: ARCHITECTURE_DIAGRAM.md  CONSTITUTION.md  INDEX.md  capability_registry.py  context.py  context_bounds.py  feature_flags.py  pyproject.toml  pyproject.toml.backup  settings.py  wiring.py
avionics/checkpoint/: __init__.py  postgres_adapter.py
avionics/database/: INDEX.md  __init__.py  client.py  connection_manager.py  factory.py  init_schema.py  postgres_client.py  postgres_graph.py  redis_client.py  registry.py
avionics/database/schemas/: 002_unified_interrupts.sql
avionics/distributed/: __init__.py  redis_bus.py
avionics/gateway/: __init__.py  event_bus.py  grpc_client.py  main.py  websocket.py  websocket_manager.py
avionics/gateway/routers/: __init__.py  chat.py  health.py  interrupts.py
avionics/llm/: INDEX.md  __init__.py  factory.py  gateway.py  k8s_models.py
avionics/llm/providers/: __init__.py  anthropic.py  base.py  litellm_provider.py  llamacpp_provider.py  llamaserver_provider.py  openai.py  openai_http_provider.py
avionics/logging/: __init__.py  adapter.py  context.py
avionics/middleware/: __init__.py  rate_limit.py
avionics/observability/: __init__.py  metrics.py  otel_adapter.py  tracing.py  tracing_middleware.py
avionics/tests/: README.md  conftest.py
avionics/tests/fixtures/: __init__.py  database.py  llm.py
avionics/tests/unit/: __init__.py  test_thresholds.py  test_tool_executor.py
avionics/tools/: __init__.py  catalog.py  executor.py
avionics/webhooks/: __init__.py  service.py
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  error.rs  events.rs  hooks.rs  lib.rs  observability.rs  session.rs  state.rs  tools.rs
crates/agent-core/tests/: react_loop.rs
crates/harness-jeeves/: Cargo.toml
crates/harness-jeeves/src/: compaction.rs  confirmation.rs  lib.rs  observability.rs
crates/harness-pi/: Cargo.toml
crates/harness-pi/src/: context.rs  lib.rs  settings.rs
jeeves_memory_module/: CONSTITUTION.md  __init__.py  handlers.py  intent_classifier.py  manager.py  pyproject.toml
jeeves_memory_module/adapters/: __init__.py  sql_adapter.py
jeeves_memory_module/messages/: __init__.py  commands.py
jeeves_memory_module/repositories/: __init__.py  chunk_repository.py  event_repository.py  graph_repository.py  graph_stub.py  pgvector_repository.py  session_state_repository.py  skill_stub.py  tool_metrics_repository.py  trace_repository.py
jeeves_memory_module/services/: __init__.py  chunk_service.py  code_indexer.py  edge_extractor.py  embedding_service.py  event_emitter.py  graph_service.py  nli_service.py  session_state_adapter.py  session_state_service.py  summarization_service.py  timeline_service.py  tool_health_service.py  trace_recorder.py  xref_manager.py
jeeves_memory_module/tests/: conftest.py
jeeves_memory_module/tests/integration/: test_sql_adapter.py
jeeves_memory_module/tests/unit/: test_event_emitter_memory.py  test_intent_classifier.py
memory_module/: CONSTITUTION.md  __init__.py  handlers.py  intent_classifier.py  manager.py  pyproject.toml  pyproject.toml.backup
memory_module/adapters/: __init__.py  sql_adapter.py
memory_module/messages/: __init__.py  events.py  queries.py
memory_module/repositories/: __init__.py  chunk_repository.py  event_repository.py  graph_stub.py  pgvector_repository.py  session_state_repository.py  skill_stub.py  tool_metrics_repository.py  trace_repository.py
memory_module/services/: __init__.py  chunk_service.py  code_indexer.py  embedding_service.py  event_emitter.py  nli_service.py  session_state_adapter.py  session_state_service.py  tool_health_service.py  trace_recorder.py  xref_manager.py
memory_module/tests/: __init__.py  conftest.py
memory_module/tests/integration/: __init__.py  test_sql_adapter.py
memory_module/tests/unit/: test_event_emitter_memory.py  test_intent_classifier.py
protocols/: __init__.py  agents.py  capability.py  config.py  enums.py  envelope.py  events.py  grpc_client.py  grpc_stub.py  interrupts.py  memory.py  protocols.py  pyproject.toml  pyproject.toml.backup  servicer.py  utils.py  validation.py
protocols/tests/: __init__.py  conftest.py
protocols/tests/integration/: __init__.py
protocols/tests/unit/: __init__.py  test_config.py  test_enums.py  test_envelope.py  test_grpc_client.py  test_memory.py  test_utils.py
python/: README.md  pyproject.toml
python/jeeves_airframe/: __init__.py  bootstrap.py  capability_registry.py  capability_wiring.py  context.py  feature_flags.py  health.py  kernel_client.py  pipeline_worker.py  settings.py  wiring.py
python/jeeves_airframe/config/: __init__.py  agent_profiles.py  constants.py  registry.py
python/jeeves_airframe/database/: INDEX.md  __init__.py  client.py
python/jeeves_core/: __init__.py  api.py  bootstrap.py  capability_registry.py  capability_wiring.py  context.py  feature_flags.py  health.py  kernel_client.py  pipeline_worker.py  settings.py  thresholds.py  wiring.py
python/jeeves_infra/: __init__.py  bootstrap.py  capability_registry.py  capability_wiring.py  context.py  feature_flags.py  health.py  kernel_client.py  pipeline_worker.py  settings.py  wiring.py
python/tests/: conftest.py  mission_conftest.py  test_event_bridge.py
(+1093 files in other folders)
