[workspace]
resolver = "2"
members = [
    "crates/agent-core",
    "crates/harness-pi",
    "crates/harness-jeeves",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
authors = ["Jeeves Team"]

[workspace.dependencies]
agent-core = { path = "crates/agent-core" }

tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "io-std", "process", "signal"] }
async-trait = "0.1"
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

thiserror = "2.0"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

genai = "0.5"

clap = { version = "4", features = ["derive", "env"] }

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
