[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jeeves-core"
version = "1.0.0"
description = "Jeeves Agentic Kernel - protocols, control tower, and runtime"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
# Full installation with all features
full = [
    "jeeves-core[observability,llm,database]",
]

# Observability (metrics, tracing)
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "prometheus-client>=0.19.0",
]

# LLM providers (for avionics)
llm = [
    "litellm>=1.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.5.0",
]

# Database adapters (for avionics)
database = [
    "asyncpg>=0.29.0",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "jeeves_core",
    "protocols",
    "control_tower",
    "mission_system",
]

[tool.hatch.build.targets.sdist]
include = [
    "jeeves_core/",
    "protocols/",
    "control_tower/",
    "mission_system/",
    "README.md",
    "LICENSE",
]
exclude = [
    # Exclude Go code from Python package
    "coreengine/",
    "commbus/",
    "cmd/",
    "*.go",
    "go.mod",
    "go.sum",
    # Exclude test data and coverage
    "tests/",
    "cover/",
    "coverage/",
    "*.json",
]
