# jeeves-core is a pure Rust project. This file exists only for workspace
# membership in the parent uv workspace. There is no Python package to install.

[project]
name = "jeeves-core"
version = "0.0.1"
description = "Jeeves Core - Rust micro-kernel for AI agent orchestration"
license = "Apache-2.0"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
