[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory_module"
version = "1.0.0"
description = "Jeeves Core - Memory services: Four-layer memory architecture"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jeeves Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "protocols>=1.0.0",
    "shared>=1.0.0",
    "pydantic>=2.5.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.2.0",  # 1.5GB+ - only for semantic search
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools]
packages = ["memory_module"]
package-dir = {"memory_module" = "."}
