[package]
name = "harness-pi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Pi-style coding-agent harness over agent-core — minimal, container-for-isolation, no confirmation gate."

[[bin]]
name = "pi"
path = "src/bin/pi.rs"

[dependencies]
agent-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
